--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "anime-api",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://horacebmagic.github.io/react-anime-api",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
@@ -17,6 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
